stype(formatter): format code

--- a/contact.html
+++ b/contact.html
@@ -1,207 +1,146 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="Contact" />
-    <meta
-      name="description"
-      content="Pour contacter le collectif, ou son chargé de production. Télécharger le dossier de presse."
-    />
-    <meta
-      name="keywords"
-      content="Comédie,Théâtre,Arts et musique,Grèce,Arts de la scène,Histoire culturelle,Arts,Tragédie,Littérature,Histoire,Divertissement,Ère élisabéthaine,Hamlet,Patrimoine culturel,Antiquité,Pièces de théâtre,Comédie dramatique,Grèce antique"
-    />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="French" />
 
-    <!--  Essential META Tags -->
-    <meta property="og:title" content="Les Sept Sceaux : Contact" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      itemprop="image"
-      content="http://lesseptsceaux.com/img/electre/affiche_2_square.png"
-    />
-    <meta property="og:url" content="http://lesseptsceaux.com/contact" />
-    <meta name="twitter:card" content="summary_large_image" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="title" content="Contact" />
+  <meta name="description"
+    content="Pour contacter le collectif, ou son chargé de production. Télécharger le dossier de presse." />
+  <meta name="keywords"
+    content="Comédie,Théâtre,Arts et musique,Grèce,Arts de la scène,Histoire culturelle,Arts,Tragédie,Littérature,Histoire,Divertissement,Ère élisabéthaine,Hamlet,Patrimoine culturel,Antiquité,Pièces de théâtre,Comédie dramatique,Grèce antique" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="language" content="French" />
 
-    <!--  Non-Essential, But Recommended -->
-    <meta
-      property="og:description"
-      content="Les Sept Sceaux: collectif théâtral. Pour contacter le collectif, ou son chargé de production. Télécharger le dossier de presse."
-    />
-    <meta property="og:site_name" content="Les Sept Sceaux" />
-    <meta
-      name="twitter:image:alt"
-      content="ELECTRE ou le crépuscule des rois"
-    />
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "577936370792392");
-      fbq("track", "PageView");
-    </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
+  <!--  Essential META Tags -->
+  <meta property="og:title" content="Les Sept Sceaux : Contact" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" itemprop="image" content="http://lesseptsceaux.com/img/electre/affiche_2_square.png" />
+  <meta property="og:url" content="http://lesseptsceaux.com/contact" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-    <title>Les Sept Sceaux : Contact</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="favicon/site.webmanifest" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body
-    class="is-flex is-flex-direction-column has-background-black has-text-light"
-  >
-    <section class="container m-auto">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image is-4by3">
-            <img src="img/equipe.jpg" alt="Les Sept Sceaux" />
-          </figure>
+  <!--  Non-Essential, But Recommended -->
+  <meta property="og:description"
+    content="Les Sept Sceaux: collectif théâtral. Pour contacter le collectif, ou son chargé de production. Télécharger le dossier de presse." />
+  <meta property="og:site_name" content="Les Sept Sceaux" />
+  <meta name="twitter:image:alt" content="ELECTRE ou le crépuscule des rois" />
+  <!-- Meta Pixel Code -->
+  <script>
+    !(function (f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function () {
+        n.callMethod
+          ? n.callMethod.apply(n, arguments)
+          : n.queue.push(arguments);
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = "2.0";
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s);
+    })(
+      window,
+      document,
+      "script",
+      "https://connect.facebook.net/en_US/fbevents.js"
+    );
+    fbq("init", "577936370792392");
+    fbq("track", "PageView");
+  </script>
+  <noscript><img height="1" width="1" style="display: none"
+      src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
+
+  <title>Les Sept Sceaux : Contact</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+  <link rel="manifest" href="favicon/site.webmanifest" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" />
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body class="is-flex is-flex-direction-column has-background-black has-text-light">
+  <section class="container m-auto">
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="img/equipe.jpg" alt="Les Sept Sceaux" />
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="media">
+          <div class="media-content">
+            <p class="title is-3 is-uppercase">Contact</p>
+          </div>
         </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <p class="title is-3 is-uppercase">Contact</p>
-            </div>
-          </div>
 
-          <div class="content">
-            <h3 class="is-uppercase">Compagnie</h3>
-            <h4>Les Sept Sceaux</h4>
-            <p>
+        <div class="content">
+          <h3 class="is-uppercase">Compagnie</h3>
+          <h4>Les Sept Sceaux</h4>
+          <p>
+            <span class="icon">
+              <i class="mdi mdi-instagram"></i>
+            </span>
+            <a href="https://www.instagram.com/lesseptsceaux/" target="_blank"
+              rel="noopener noreferrer"><span>@lesseptsceaux</span>
+              <span class="icon is-small">
+                <i class="mdi mdi-open-in-new"></i>
+              </span> </a><br />
+            <span class="icon">
+              <i class="mdi mdi-facebook"></i>
+            </span>
+            <a href="https://www.facebook.com/compagnie.les.sept.sceaux/" target="_blank" rel="noopener noreferrer">
+              <span>Les Sept Sceaux</span>
+              <span class="icon is-small">
+                <i class="mdi mdi-open-in-new"></i>
+              </span> </a><br />
+            <span class="icon">
+              <i class="mdi mdi-email"></i>
+            </span>
+            contact<span class="icon"> <i class="mdi mdi-at"></i> </span>lesseptsceaux.com
+          </p>
+          <h3 class="is-uppercase">Porteur de projet</h3>
+          <h4>Matthieu Desquilbet</h4>
+          <p>
+            <span class="icon">
+              <i class="mdi mdi-email"></i>
+            </span>
+            matthieu<span class="icon"><i class="mdi mdi-at"></i></span>lesseptsceaux.com<br />
+            Dossiers de presse :
+            <a href="/electre-ou-le-crepuscule-des-rois-dossier-presse.pdf" target="_blank" rel="noopener noreferrer">
               <span class="icon">
-                <i class="mdi mdi-instagram"></i>
+                <i class="mdi mdi-file"></i>
               </span>
-              <a
-                href="https://www.instagram.com/lesseptsceaux/"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><span>@lesseptsceaux</span>
-                <span class="icon is-small">
-                  <i class="mdi mdi-open-in-new"></i>
-                </span> </a
-              ><br />
+              <i>Électre</i>
+            </a>
+            <a href="/SERENADE-Dossier-Artistique-2023-wecompress.com.pdf" target="_blank" rel="noopener noreferrer">
               <span class="icon">
-                <i class="mdi mdi-facebook"></i>
+                <i class="mdi mdi-file"></i>
               </span>
-              <a
-                href="https://www.facebook.com/compagnie.les.sept.sceaux/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <span>Les Sept Sceaux</span>
-                <span class="icon is-small">
-                  <i class="mdi mdi-open-in-new"></i>
-                </span> </a
-              ><br />
-              <span class="icon">
-                <i class="mdi mdi-email"></i>
-              </span>
-              contact<span class="icon"> <i class="mdi mdi-at"></i> </span
-              >lesseptsceaux.com
-            </p>
-            <h3 class="is-uppercase">Porteur de projet</h3>
-            <h4>Matthieu Desquilbet</h4>
-            <p>
-              <span class="icon">
-                <i class="mdi mdi-email"></i>
-              </span>
-              matthieu<span class="icon">
-                <i class="mdi mdi-at"></i> </span
-              >lesseptsceaux.com<br />
-              Dossiers de presse :
-              <a
-                href="/electre-ou-le-crepuscule-des-rois-dossier-presse.pdf"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <span class="icon">
-                  <i class="mdi mdi-file"></i>
-                </span>
-                <i>Électre</i>
-              </a>
-              <a
-                href="/SERENADE-Dossier-Artistique-2023-wecompress.com.pdf"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <span class="icon">
-                  <i class="mdi mdi-file"></i>
-                </span>
-                <i>La Sérénade</i>
-              </a>
-            </p>
-          </div>
+              <i>La Sérénade</i>
+            </a>
+          </p>
         </div>
       </div>
-    </section>
-    <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
-      <p class="columns is-mobile m-0">
-        <a
-          class="column p-0 has-text-light"
-          href="/electre-ou-le-crepuscule-des-rois"
-          >Électre</a
-        >
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/la-serenade">La&nbsp;Sérénade</a>
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/contact">Contact</a>
-      </p>
-    </footer>
-  </body>
+    </div>
+  </section>
+  <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
+    <p class="columns is-mobile m-0">
+      <a class="column p-0 has-text-light" href="/electre-ou-le-crepuscule-des-rois">Électre</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/la-serenade">La&nbsp;Sérénade</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/contact">Contact</a>
+    </p>
+  </footer>
+</body>
+
 </html>
