--- a/index.html
+++ b/index.html
@@ -1,204 +1,145 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="title"
-      content="Les Sept Sceaux : Théorème de Pier Paolo Pasolini"
-    />
-    <meta
-      name="description"
-      content="Les Sept Sceaux: collectif théâtral. Théorème de Pier Paolo Pasolini au Point du Jour à Paris. Électre ou le crépuscule des rois et La Sérénade de Slawomir Mrozek, en 2023 au théâtre de l'Essaïon à Paris."
-    />
-    <meta
-      name="keywords"
-      content="Comédie,Théâtre,Arts et musique,Grèce,Arts de la scène,Histoire culturelle,Arts,Tragédie,Littérature,Histoire,Divertissement,Ère élisabéthaine,Hamlet,Patrimoine culturel,Antiquité,Pièces de théâtre,Comédie dramatique,Grèce antique"
-    />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="French" />
 
-    <!--  Essential META Tags -->
-    <meta
-      property="og:title"
-      content="Les Sept Sceaux : Théorème de Pier Paolo Pasolini"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="fb:app_id" content="website" />
-    <meta
-      property="og:image"
-      itemprop="image"
-      content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.png"
-    />
-    <meta property="og:url" content="http://lesseptsceaux.com" />
-    <meta name="twitter:card" content="summary_large_image" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="title" content="Les Sept Sceaux : Théorème de Pier Paolo Pasolini" />
+  <meta name="description"
+    content="Les Sept Sceaux: collectif théâtral. Théorème de Pier Paolo Pasolini au Point du Jour à Paris. Électre ou le crépuscule des rois et La Sérénade de Slawomir Mrozek, en 2023 au théâtre de l'Essaïon à Paris." />
+  <meta name="keywords"
+    content="Comédie,Théâtre,Arts et musique,Grèce,Arts de la scène,Histoire culturelle,Arts,Tragédie,Littérature,Histoire,Divertissement,Ère élisabéthaine,Hamlet,Patrimoine culturel,Antiquité,Pièces de théâtre,Comédie dramatique,Grèce antique" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="language" content="French" />
 
-    <!--  Non-Essential, But Recommended -->
-    <meta
-      property="og:description"
-      content="Les Sept Sceaux: collectif théâtral. Théorème de Pier Paolo Pasolini au Point du Jour à Paris. Électre ou le crépuscule des rois et La Sérénade de Slawomir Mrozek, en 2023 au théâtre de l'Essaïon à Paris."
-    />
-    <meta property="og:site_name" content="Les Sept Sceaux" />
-    <meta name="twitter:image:alt" content="Théorème de Pier Paolo Pasolini" />
+  <!--  Essential META Tags -->
+  <meta property="og:title" content="Les Sept Sceaux : Théorème de Pier Paolo Pasolini" />
+  <meta property="og:type" content="website" />
+  <meta property="fb:app_id" content="website" />
+  <meta property="og:image" itemprop="image" content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.png" />
+  <meta property="og:url" content="http://lesseptsceaux.com" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "577936370792392");
-      fbq("track", "PageView");
-    </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
+  <!--  Non-Essential, But Recommended -->
+  <meta property="og:description"
+    content="Les Sept Sceaux: collectif théâtral. Théorème de Pier Paolo Pasolini au Point du Jour à Paris. Électre ou le crépuscule des rois et La Sérénade de Slawomir Mrozek, en 2023 au théâtre de l'Essaïon à Paris." />
+  <meta property="og:site_name" content="Les Sept Sceaux" />
+  <meta name="twitter:image:alt" content="Théorème de Pier Paolo Pasolini" />
 
-    <title>Les Sept Sceaux : Théorème de Pier Paolo Pasolini</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="favicon/site.webmanifest" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body
-    class="is-flex is-flex-direction-column has-background-black has-text-light"
-  >
-    <header class="is-flex is-justify-content-center is-size-7">
-      <p><b>Les Sept Sceaux</b> <i>présentent</i></p>
-    </header>
-    <section class="container mt-2 has-text-centered">
-      <div
-        class="block is-uppercase m-auto"
-        style="max-width: 500px; width: 100%"
-      >
-        <h1 class="columns is-mobile m-0 is-size-1 has-text-weight-bold">
-          <span class="column p-0">T</span>
-          <span class="column p-0">H</span>
-          <span class="column p-0">É</span>
-          <span class="column p-0">O</span>
-          <span class="column p-0">R</span>
-          <span class="column p-0">È</span>
-          <span class="column p-0">M</span>
-          <span class="column p-0">E</span>
-        </h1>
-        <h2 class="columns is-mobile m-0 is-size-5 has-text-weight-light">
-          <span class="column p-0">d</span>
-          <span class="column p-0">e</span>
-          <span class="column p-0">&nbsp;</span>
-          <span class="column p-0">P</span>
-          <span class="column p-0">i</span>
-          <span class="column p-0">e</span>
-          <span class="column p-0">r</span>
-          <span class="column p-0">&nbsp;</span>
-          <span class="column p-0">P</span>
-          <span class="column p-0">a</span>
-          <span class="column p-0">o</span>
-          <span class="column p-0">l</span>
-          <span class="column p-0">o</span>
-          <span class="column p-0">&nbsp;</span>
-          <span class="column p-0">P</span>
-          <span class="column p-0">a</span>
-          <span class="column p-0">s</span>
-          <span class="column p-0">o</span>
-          <span class="column p-0">l</span>
-          <span class="column p-0">i</span>
-          <span class="column p-0">n</span>
-          <span class="column p-0">i</span>
-        </h2>
-      </div>
+  <!-- Meta Pixel Code -->
+  <script>
+    !(function (f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function () {
+        n.callMethod
+          ? n.callMethod.apply(n, arguments)
+          : n.queue.push(arguments);
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = "2.0";
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s);
+    })(
+      window,
+      document,
+      "script",
+      "https://connect.facebook.net/en_US/fbevents.js"
+    );
+    fbq("init", "577936370792392");
+    fbq("track", "PageView");
+  </script>
+  <noscript><img height="1" width="1" style="display: none"
+      src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 
-      <div class="content mt-5">
-        <p>
-          Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à
-          20h<br /><a
-            class="button is-black is-inverted is-outlined m-4 is-large"
-            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini"
-            target="_blank"
-            ><span class="icon">
-              <i class="mdi mdi-ticket-confirmation"></i> </span
-            ><span>30/11</span></a
-          ><a
-            class="button is-black is-inverted is-outlined m-4 is-large"
-            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini-01-12"
-            target="_blank"
-            ><span class="icon">
-              <i class="mdi mdi-ticket-confirmation"></i> </span
-            ><span>01/12</span></a
-          >
-        </p>
-        <figure>
-          <img
-            src="img/theoreme/theoreme-affiche-web.png"
-            alt="Théorème de Pier Paolo Pasolini"
-          />
-        </figure>
-      </div>
-    </section>
+  <title>Les Sept Sceaux : Théorème de Pier Paolo Pasolini</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+  <link rel="manifest" href="favicon/site.webmanifest" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" />
+  <link rel="stylesheet" href="index.css" />
+</head>
 
-    <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
-      <p class="columns is-mobile m-0">
-        <a
-          class="column p-0 has-text-light"
-          href="/electre-ou-le-crepuscule-des-rois"
-          >Électre</a
-        >
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/la-serenade"
-          >La&nbsp;Sérénade</a
-        >
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/theoreme">Théorème</a>
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/contact">Contact</a>
+<body class="is-flex is-flex-direction-column has-background-black has-text-light">
+  <header class="is-flex is-justify-content-center is-size-7">
+    <p><b>Les Sept Sceaux</b> <i>présentent</i></p>
+  </header>
+  <section class="container mt-2 has-text-centered">
+    <div class="block is-uppercase m-auto" style="max-width: 500px; width: 100%">
+      <h1 class="columns is-mobile m-0 is-size-1 has-text-weight-bold">
+        <span class="column p-0">T</span>
+        <span class="column p-0">H</span>
+        <span class="column p-0">É</span>
+        <span class="column p-0">O</span>
+        <span class="column p-0">R</span>
+        <span class="column p-0">È</span>
+        <span class="column p-0">M</span>
+        <span class="column p-0">E</span>
+      </h1>
+      <h2 class="columns is-mobile m-0 is-size-5 has-text-weight-light">
+        <span class="column p-0">d</span>
+        <span class="column p-0">e</span>
+        <span class="column p-0">&nbsp;</span>
+        <span class="column p-0">P</span>
+        <span class="column p-0">i</span>
+        <span class="column p-0">e</span>
+        <span class="column p-0">r</span>
+        <span class="column p-0">&nbsp;</span>
+        <span class="column p-0">P</span>
+        <span class="column p-0">a</span>
+        <span class="column p-0">o</span>
+        <span class="column p-0">l</span>
+        <span class="column p-0">o</span>
+        <span class="column p-0">&nbsp;</span>
+        <span class="column p-0">P</span>
+        <span class="column p-0">a</span>
+        <span class="column p-0">s</span>
+        <span class="column p-0">o</span>
+        <span class="column p-0">l</span>
+        <span class="column p-0">i</span>
+        <span class="column p-0">n</span>
+        <span class="column p-0">i</span>
+      </h2>
+    </div>
+
+    <div class="content mt-5">
+      <p>
+        Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à
+        20h<br /><a class="button is-black is-inverted is-outlined m-4 is-large"
+          href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini"
+          target="_blank"><span class="icon">
+            <i class="mdi mdi-ticket-confirmation"></i> </span><span>30/11</span></a><a
+          class="button is-black is-inverted is-outlined m-4 is-large"
+          href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini-01-12"
+          target="_blank"><span class="icon">
+            <i class="mdi mdi-ticket-confirmation"></i> </span><span>01/12</span></a>
       </p>
-    </footer>
-  </body>
+      <figure>
+        <img src="img/theoreme/theoreme-affiche-web.png" alt="Théorème de Pier Paolo Pasolini" />
+      </figure>
+    </div>
+  </section>
+
+  <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
+    <p class="columns is-mobile m-0">
+      <a class="column p-0 has-text-light" href="/electre-ou-le-crepuscule-des-rois">Électre</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/la-serenade">La&nbsp;Sérénade</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/theoreme">Théorème</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/contact">Contact</a>
+    </p>
+  </footer>
+</body>
+
 </html>
