--- a/theoreme.html
+++ b/theoreme.html
@@ -1,256 +1,194 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="title"
-      content="Théorème de Pier Paolo Pasolini - Pièce de théâtre"
-    />
-    <meta
-      name="description"
-      content="Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ? Que viendrait-il remuer qui végète dans notre siècle ?"
-    />
-    <meta
-      name="keywords"
-      content="Comédie,Théâtre,Arts et musique,Italie,Pasolini,Cinéma,Arts de la scène,Histoire culturelle,Arts,Littérature,Histoire,Divertissement,Patrimoine culturel,Pièces de théâtre,Comédie dramatique, Parabole"
-    />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="French" />
 
-    <!--  Essential META Tags -->
-    <meta
-      property="og:title"
-      content="Théorème de Pier Paolo Pasolini - Pièce de théâtre"
-    />
-    <meta property="og:type" content="article" />
-    <meta
-      property="og:image"
-      itemprop="image"
-      content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.png"
-    />
-    <meta property="og:url" content="http://lesseptsceaux.com/theoreme" />
-    <meta name="twitter:card" content="summary_large_image" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="title" content="Théorème de Pier Paolo Pasolini - Pièce de théâtre" />
+  <meta name="description"
+    content="Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ? Que viendrait-il remuer qui végète dans notre siècle ?" />
+  <meta name="keywords"
+    content="Comédie,Théâtre,Arts et musique,Italie,Pasolini,Cinéma,Arts de la scène,Histoire culturelle,Arts,Littérature,Histoire,Divertissement,Patrimoine culturel,Pièces de théâtre,Comédie dramatique, Parabole" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="language" content="French" />
 
-    <!--  Non-Essential, But Recommended -->
-    <meta
-      property="og:description"
-      content="Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ? Que viendrait-il remuer qui végète dans notre siècle ?"
-    />
-    <meta property="og:site_name" content="Les Sept Sceaux" />
-    <meta name="twitter:image:alt" content="Théorème de Pier Paolo Pasolini" />
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "577936370792392");
-      fbq("track", "PageView");
-    </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
+  <!--  Essential META Tags -->
+  <meta property="og:title" content="Théorème de Pier Paolo Pasolini - Pièce de théâtre" />
+  <meta property="og:type" content="article" />
+  <meta property="og:image" itemprop="image" content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.png" />
+  <meta property="og:url" content="http://lesseptsceaux.com/theoreme" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-    <title>Théorème</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="favicon/site.webmanifest" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body
-    class="is-flex is-flex-direction-column has-background-black has-text-light"
-  >
-    <header class="is-flex is-justify-content-center is-size-7">
-      <p><b>Les Sept Sceaux</b> <i>présentent</i></p>
-    </header>
-    <section class="container mt-2 has-text-centered">
-      <div
-        class="block is-uppercase m-auto"
-        style="max-width: 500px; width: 100%"
-      >
-        <h1 class="columns is-mobile m-0 is-size-1 has-text-weight-bold">
-          <span class="column p-0">T</span>
-          <span class="column p-0">H</span>
-          <span class="column p-0">É</span>
-          <span class="column p-0">O</span>
-          <span class="column p-0">R</span>
-          <span class="column p-0">È</span>
-          <span class="column p-0">M</span>
-          <span class="column p-0">E</span>
-        </h1>
-        <h2 class="columns is-mobile m-0 is-size-5 has-text-weight-light">
-          <span class="column p-0">d</span>
-          <span class="column p-0">e</span>
-          <span class="column p-0">&nbsp;</span>
-          <span class="column p-0">P</span>
-          <span class="column p-0">i</span>
-          <span class="column p-0">e</span>
-          <span class="column p-0">r</span>
-          <span class="column p-0">&nbsp;</span>
-          <span class="column p-0">P</span>
-          <span class="column p-0">a</span>
-          <span class="column p-0">o</span>
-          <span class="column p-0">l</span>
-          <span class="column p-0">o</span>
-          <span class="column p-0">&nbsp;</span>
-          <span class="column p-0">P</span>
-          <span class="column p-0">a</span>
-          <span class="column p-0">s</span>
-          <span class="column p-0">o</span>
-          <span class="column p-0">l</span>
-          <span class="column p-0">i</span>
-          <span class="column p-0">n</span>
-          <span class="column p-0">i</span>
-        </h2>
-      </div>
+  <!--  Non-Essential, But Recommended -->
+  <meta property="og:description"
+    content="Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ? Que viendrait-il remuer qui végète dans notre siècle ?" />
+  <meta property="og:site_name" content="Les Sept Sceaux" />
+  <meta name="twitter:image:alt" content="Théorème de Pier Paolo Pasolini" />
+  <!-- Meta Pixel Code -->
+  <script>
+    !(function (f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function () {
+        n.callMethod
+          ? n.callMethod.apply(n, arguments)
+          : n.queue.push(arguments);
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = "2.0";
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s);
+    })(
+      window,
+      document,
+      "script",
+      "https://connect.facebook.net/en_US/fbevents.js"
+    );
+    fbq("init", "577936370792392");
+    fbq("track", "PageView");
+  </script>
+  <noscript><img height="1" width="1" style="display: none"
+      src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 
-      <div class="content mt-5">
-        <p>
-          Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait
-          sa subversion ? Que viendrait-il remuer qui végète dans notre
-          siècle?<br />
-          Dans une riche famille bourgeoise du 11ème arrondissement de Paris,
-          arrive un jour un jeune-homme à la présence magnétique. La bonne, le
-          fils, la mère, la fille, le père, tous tombent successivement sous le
-          charme du visiteur, qui donne à chacun son amour charnel. Puis le
-          jeune homme s'en va comme il est venu. Pour la famille, ce départ est
-          une prise de conscience douloureuse de son vide existentiel. Chacun va
-          alors connaître une traversée du désert qui n'a pas d'issue. Seule la
-          bonne, qui n'a pas perdu son sens du sacré, trouve la voie du salut et
-          accomplit des miracles.
-        </p>
+  <title>Théorème</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+  <link rel="manifest" href="favicon/site.webmanifest" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" />
+  <link rel="stylesheet" href="index.css" />
+</head>
 
-        <h5 class="has-text-light">Mise En Scene</h5>
-        <p>Alwina Najem-Meyer</p>
+<body class="is-flex is-flex-direction-column has-background-black has-text-light">
+  <header class="is-flex is-justify-content-center is-size-7">
+    <p><b>Les Sept Sceaux</b> <i>présentent</i></p>
+  </header>
+  <section class="container mt-2 has-text-centered">
+    <div class="block is-uppercase m-auto" style="max-width: 500px; width: 100%">
+      <h1 class="columns is-mobile m-0 is-size-1 has-text-weight-bold">
+        <span class="column p-0">T</span>
+        <span class="column p-0">H</span>
+        <span class="column p-0">É</span>
+        <span class="column p-0">O</span>
+        <span class="column p-0">R</span>
+        <span class="column p-0">È</span>
+        <span class="column p-0">M</span>
+        <span class="column p-0">E</span>
+      </h1>
+      <h2 class="columns is-mobile m-0 is-size-5 has-text-weight-light">
+        <span class="column p-0">d</span>
+        <span class="column p-0">e</span>
+        <span class="column p-0">&nbsp;</span>
+        <span class="column p-0">P</span>
+        <span class="column p-0">i</span>
+        <span class="column p-0">e</span>
+        <span class="column p-0">r</span>
+        <span class="column p-0">&nbsp;</span>
+        <span class="column p-0">P</span>
+        <span class="column p-0">a</span>
+        <span class="column p-0">o</span>
+        <span class="column p-0">l</span>
+        <span class="column p-0">o</span>
+        <span class="column p-0">&nbsp;</span>
+        <span class="column p-0">P</span>
+        <span class="column p-0">a</span>
+        <span class="column p-0">s</span>
+        <span class="column p-0">o</span>
+        <span class="column p-0">l</span>
+        <span class="column p-0">i</span>
+        <span class="column p-0">n</span>
+        <span class="column p-0">i</span>
+      </h2>
+    </div>
 
-        <h5 class="has-text-light">Avec</h5>
-        <table
-          class="table is-narrow has-background-black has-text-light m-auto"
-          style="max-width: 300px; width: 100%"
-        >
-          <tbody>
-            <tr>
-              <td class="has-text-right">Louis Davesne</td>
-              <td class="has-text-left">Pierre, le fils</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Matthieu Desquilbet</td>
-              <td class="has-text-left">L'envoyé</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Yann Guénon</td>
-              <td class="has-text-left">Paul, le père</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Margaux Lopez</td>
-              <td class="has-text-left">Lucie, la mère</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Alwina<br />Najem-Meyer</td>
-              <td class="has-text-left">Émilie, la bonne</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Pauline<br />Scoupe-Fournier</td>
-              <td class="has-text-left">Odette, la fille</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h3 class="has-text-light">Programmation</h3>
-        <p>
-          Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à
-          20h<br /><a
-            class="button is-black is-inverted is-outlined m-4 is-large"
-            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini"
-            target="_blank"
-            ><span class="icon">
-              <i class="mdi mdi-ticket-confirmation"></i> </span
-            ><span>30/11</span></a
-          ><a
-            class="button is-black is-inverted is-outlined m-4 is-large"
-            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini-01-12"
-            target="_blank"
-            ><span class="icon">
-              <i class="mdi mdi-ticket-confirmation"></i> </span
-            ><span>01/12</span></a
-          >
-        </p>
-      </div>
-
-      <div class="block">
-        <figure>
-          <img
-            src="img/theoreme/theoreme-affiche-web.png"
-            alt="Théorème de Pier Paolo Pasolini"
-          />
-        </figure>
-      </div>
-    </section>
-    <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
-      <p class="columns is-mobile m-0">
-        <a
-          class="column p-0 has-text-light"
-          href="/electre-ou-le-crepuscule-des-rois"
-          >Électre</a
-        >
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/la-serenade"
-          >La&nbsp;Sérénade</a
-        >
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/theoreme">Théorème</a>
-        <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/contact">Contact</a>
+    <div class="content mt-5">
+      <p>
+        Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait
+        sa subversion ? Que viendrait-il remuer qui végète dans notre
+        siècle?<br />
+        Dans une riche famille bourgeoise du 11ème arrondissement de Paris,
+        arrive un jour un jeune-homme à la présence magnétique. La bonne, le
+        fils, la mère, la fille, le père, tous tombent successivement sous le
+        charme du visiteur, qui donne à chacun son amour charnel. Puis le
+        jeune homme s'en va comme il est venu. Pour la famille, ce départ est
+        une prise de conscience douloureuse de son vide existentiel. Chacun va
+        alors connaître une traversée du désert qui n'a pas d'issue. Seule la
+        bonne, qui n'a pas perdu son sens du sacré, trouve la voie du salut et
+        accomplit des miracles.
       </p>
-    </footer>
-  </body>
+
+      <h5 class="has-text-light">Mise En Scene</h5>
+      <p>Alwina Najem-Meyer</p>
+
+      <h5 class="has-text-light">Avec</h5>
+      <table class="table is-narrow has-background-black has-text-light m-auto" style="max-width: 300px; width: 100%">
+        <tbody>
+          <tr>
+            <td class="has-text-right">Louis Davesne</td>
+            <td class="has-text-left">Pierre, le fils</td>
+          </tr>
+          <tr>
+            <td class="has-text-right">Matthieu Desquilbet</td>
+            <td class="has-text-left">L'envoyé</td>
+          </tr>
+          <tr>
+            <td class="has-text-right">Yann Guénon</td>
+            <td class="has-text-left">Paul, le père</td>
+          </tr>
+          <tr>
+            <td class="has-text-right">Margaux Lopez</td>
+            <td class="has-text-left">Lucie, la mère</td>
+          </tr>
+          <tr>
+            <td class="has-text-right">Alwina<br />Najem-Meyer</td>
+            <td class="has-text-left">Émilie, la bonne</td>
+          </tr>
+          <tr>
+            <td class="has-text-right">Pauline<br />Scoupe-Fournier</td>
+            <td class="has-text-left">Odette, la fille</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h3 class="has-text-light">Programmation</h3>
+      <p>
+        Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à
+        20h<br /><a class="button is-black is-inverted is-outlined m-4 is-large"
+          href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini"
+          target="_blank"><span class="icon">
+            <i class="mdi mdi-ticket-confirmation"></i> </span><span>30/11</span></a><a
+          class="button is-black is-inverted is-outlined m-4 is-large"
+          href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini-01-12"
+          target="_blank"><span class="icon">
+            <i class="mdi mdi-ticket-confirmation"></i> </span><span>01/12</span></a>
+      </p>
+    </div>
+
+    <div class="block">
+      <figure>
+        <img src="img/theoreme/theoreme-affiche-web.png" alt="Théorème de Pier Paolo Pasolini" />
+      </figure>
+    </div>
+  </section>
+  <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
+    <p class="columns is-mobile m-0">
+      <a class="column p-0 has-text-light" href="/electre-ou-le-crepuscule-des-rois">Électre</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/la-serenade">La&nbsp;Sérénade</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/theoreme">Théorème</a>
+      <span class="pl-4 pr-4">|</span>
+      <a class="column p-0 has-text-light" href="/contact">Contact</a>
+    </p>
+  </footer>
+</body>
+
 </html>
